<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.oncast.ontrack.acceptance</groupId>
	<artifactId>ontrackExtAcceptance</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	
	<properties>
		<!-- Code analysis -->
		<coverage.reports.dir>${basedir}/target/coverage-reports</coverage.reports.dir>
		<sonar.jacoco.reportPath>${coverage.reports.dir}/jacoco-unit.exec</sonar.jacoco.reportPath>
		<sonar.jacoco.itReportPath>${coverage.reports.dir}/jacoco-it.exec</sonar.jacoco.itReportPath>
		<sonar.jacoco.jar>${basedir}/lib/jacocoagent.jar</sonar.jacoco.jar>
	</properties>

	<dependencies>
		<!-- OnTrack Project -->
		<dependency>
			<groupId>br.com.oncast</groupId>
			<artifactId>ontrackExt</artifactId>
			<version>0.0.1</version>
			<type>war</type>
		</dependency>
		
		<!-- Test Dependencies -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.15.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
					<argLine>-javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.reportPath}</argLine>
					<excludes>
						<exclude>**/*TestUtils.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>